--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,17 @@
 FROM python:3.10
 
+# 作業ディレクトリを設定
 WORKDIR /app
 
+# 必要なパッケージをインストール
+RUN apt-get update && apt-get install -y gcc && rm -rf /var/lib/apt/lists/*
+
+# 依存関係をコピーしてインストール
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# アプリのソースコードをコピー
 COPY . .
 
+# FastAPIの起動
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
