--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,8 +6,13 @@ services:
     container_name: backend
     ports:
       - "8000:8000"
+    volumes:
+      - ./backend:/app
+    environment:
+      - NODE_ENV=development
     env_file:
       - ./backend/.env
+    command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
     networks:
       - app_network
 
@@ -16,6 +21,11 @@ services:
     container_name: frontend
     ports:
       - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - ENV=development
     env_file:
       - ./frontend/.env.local
     depends_on:
