--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,7 +2,9 @@ version: "3.8"
 
 services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
     container_name: backend
     ports:
       - "8000:8000"
@@ -15,9 +17,12 @@ services:
     command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
     networks:
       - app_network
+    restart: unless-stopped
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
     container_name: frontend
     ports:
       - "3000:3000"
@@ -32,6 +37,7 @@ services:
       - backend
     networks:
       - app_network
+    restart: unless-stopped
 
 networks:
   app_network:
