--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Login to Railway
         env:
           RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
-        run: echo $RAILWAY_API_TOKEN | railway login --token
+        run: railway login
 
       - name: Link Railway Project
         env:
