--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Install Railway CLI
         run: curl -fsSL https://railway.app/install.sh | sh
 
-      - name: Login to Railway
-        run: railway login --token=${{ secrets.RAILWAY_TOKEN }}
+      - name: Set Railway Token
+        run: echo "export RAILWAY_TOKEN=${{ secrets.RAILWAY_TOKEN }}" >> $GITHUB_ENV
 
       - name: Link Railway Project
         env:
