--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install Railway CLI
-        run: curl -fsSL https://railway.app/install.sh | sh
+      - name: Install/Update Railway CLI
+        run: curl -fsSL https://raw.githubusercontent.com/railwayapp/cli/main/install.sh | sh
 
-      - name: Set Railway Token
-        run: echo "RAILWAY_TOKEN=${{ secrets.RAILWAY_TOKEN }}" >> $GITHUB_ENV
+      - name: Authenticate Railway
+        run: railway login --auth ${{ secrets.RAILWAY_TOKEN }}
 
       - name: Verify Authentication
         run: railway whoami
