--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,18 +11,32 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name: Install/Update Railway CLI
         run: |
           curl -fsSL https://raw.githubusercontent.com/railwayapp/cli/main/install.sh | sh
-          echo "$HOME/.railway/bin" >> $GITHUB_PATH
+          export PATH="$HOME/.railway/bin:$PATH"
 
       - name: Authenticate Railway
         run: railway login --auth ${{ secrets.RAILWAY_TOKEN }}
 
       - name: Verify Authentication
         run: railway whoami
+
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.8"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: |
+          pytest
 
       - name: Link Railway Project
         env:
