--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Install/Update Railway CLI
         run: |
-          curl -fsSL https://raw.githubusercontent.com/railwayapp/cli/main/install.sh | sh
-          export PATH="$HOME/.railway/bin:$PATH"
+          curl -fsSL https://railway.app/install.sh | sh
+          echo 'export PATH="$HOME/.railway/bin:$PATH"' >> $GITHUB_ENV
 
       - name: Authenticate Railway
         run: railway login --auth ${{ secrets.RAILWAY_TOKEN }}
