RAILWAY_TOKENを手動でrailwayコマンドに渡す

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,17 +9,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     container: ghcr.io/railwayapp/cli:latest
-    env:
-      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Verify Authentication
-        run: railway whoami
+        run: RAILWAY_TOKEN=${{ secrets.RAILWAY_TOKEN }} railway whoami
 
       - name: Link Railway Project
-        run: railway link --project 2a304d76-4f0f-4f10-8a39-ffb632cca051
+        run: RAILWAY_TOKEN=${{ secrets.RAILWAY_TOKEN }} railway link --project 2a304d76-4f0f-4f10-8a39-ffb632cca051
 
       - name: Deploy to Railway
-        run: railway up --service backend
+        run: RAILWAY_TOKEN=${{ secrets.RAILWAY_TOKEN }} railway up --service backend
