--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy to Railway
-        run: railway up --service backend
+        run: railway up --service makeMdArticle
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
