--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
   "devDependencies": {
     "@types/node": "22.13.8",
     "@types/react": "^19.0.10",
+    "autoprefixer": "^10.0.0",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.8.2"
   }
 }
